[gd_scene load_steps=2 format=3 uid="uid://blk752tav070r"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_ohyn0"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_ohyn0")

[node name="MenuCamera" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="PlayMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="ColorRect" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0, 0.831373, 1)

[node name="PanelContainer" type="PanelContainer" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -200.5
offset_right = 143.5
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayMenu/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="ButtonMonday" type="Button" parent="PlayMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Monday"

[node name="ButtonTuesday" type="Button" parent="PlayMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Tuesday"

[node name="ButtonWednesday" type="Button" parent="PlayMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Wednesday"

[node name="ButtonThursday" type="Button" parent="PlayMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Thursday"

[node name="ButtonFriday" type="Button" parent="PlayMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Friday"

[connection signal="pressed" from="PlayMenu/PanelContainer/VBoxContainer/ButtonMonday" to="." method="_on_button_monday_pressed"]
[connection signal="pressed" from="PlayMenu/PanelContainer/VBoxContainer/ButtonTuesday" to="." method="_on_button_tuesday_pressed"]
[connection signal="pressed" from="PlayMenu/PanelContainer/VBoxContainer/ButtonWednesday" to="." method="_on_button_wednesday_pressed"]
[connection signal="pressed" from="PlayMenu/PanelContainer/VBoxContainer/ButtonThursday" to="." method="_on_button_thursday_pressed"]
[connection signal="pressed" from="PlayMenu/PanelContainer/VBoxContainer/ButtonFriday" to="." method="_on_button_friday_pressed"]
